--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ nix = { version = "0.27.1", features = ["process", "term", "signal"] }
 thiserror = "1.0.49"
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-stream = { version = "0.1.14", features = ["signal"] }
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
