--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ color-eyre = "0.6.2"
 eyre = "0.6.8"
 futures = "0.3.28"
 nix = { version = "0.27.1", features = ["process", "term", "signal"] }
+once_cell = "1.18.0"
 thiserror = "1.0.49"
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-stream = { version = "0.1.14", features = ["signal"] }
