--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-stream = "0.3.5"
 color-eyre = "0.6.2"
 eyre = "0.6.8"
 futures = "0.3.28"
