--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,17 +3,29 @@ name = "scinit"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "scinit"
+path = "src/main.rs"
+
 [dependencies]
-async-stream = "0.3.5"
 color-eyre = "0.6.2"
 eyre = "0.6.8"
-futures = "0.3.28"
-nix = { version = "0.27.1", features = ["process", "term", "signal"] }
-once_cell = "1.18.0"
-thiserror = "1.0.49"
-tokio = { version = "1.32.0", features = ["full"] }
-tokio-stream = { version = "0.1.14", features = ["signal"] }
+nix = { version = "0.30.1", features = ["process", "term", "signal"] }
+tokio = { version = "1.32.0", features = ["full", "signal", "net"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+
+# Live-reloading dependencies
+notify = "8.1"
+tokio-util = { version = "0.7", features = ["codec"] }
+socket2 = "0.6"
+libc = "0.2"
+clap = { version = "4.0", features = ["derive"] }
+uuid = { version = "1.0", features = ["v4"] }
+chrono = "0.4"
+
+[dev-dependencies]
+tempfile = "3.8"
+chrono = "0.4"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
