--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ path = "src/main.rs"
 [dependencies]
 color-eyre = "0.6.2"
 eyre = "0.6.8"
-nix = { version = "0.30.1", features = ["process", "term", "signal"] }
+nix = { version = "0.30.1", features = ["process", "term", "signal", "socket", "fs"] }
 tokio = { version = "1.32.0", features = ["full", "signal", "net"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
