Implement phase 1 and 2 of integration test framework
- Phase 1: Core infrastructure with ProcessTestHarness and SignalTestFramework
- Phase 2: Complete signal handling test suite with 7 test scenarios
- Add custom signal assertions co-located with testing infrastructure
- Replace manual shell scripts with automated systematic validation
- Identify and document signal forwarding bug in KNOWN-ISSUES.md
- Performance monitoring with configurable response time targets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,6 @@ chrono = "0.4"
 [dev-dependencies]
 tempfile = "3.8"
 chrono = "0.4"
+anyhow = "1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
