--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ libc = "0.2"
 clap = { version = "4.0", features = ["derive"] }
 uuid = { version = "1.0", features = ["v4"] }
 chrono = "0.4"
+once_cell = "1.21.3"
 
 [dev-dependencies]
 tempfile = "3.8"
