--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,6 @@ once_cell = "1.21.3"
 tempfile = "3.8"
 chrono = "0.4"
 anyhow = "1.0"
+echosrv = "0.3.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
